# sony-headphones-ctl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: README.md
src/: args.rs  common.rs  lib.rs  main.rs
src/commands/: mod.rs
src/commands/mdr/: ambient_sound.rs  mod.rs
src/commands/mdr2/: mod.rs  registered_devices.rs
src/devices/: mod.rs  wf1000xm4.rs
src/devices/wf1000xm4/: anc.rs  equalizer.rs  mod.rs
